# moco

./: AGENTS.md  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs  theme.rs  workspace.rs
src/cli/: add.rs  config.rs  delete.rs  edit.rs  export.rs  init.rs  label.rs  list.rs  mod.rs  note.rs  open.rs  remove.rs  status.rs  sync.rs  tag.rs  task_ref.rs
src/cli/project/: category.rs  info.rs  list.rs  mod.rs  relocate.rs  set_category.rs  set_sync.rs
src/db/: mod.rs  redb_store.rs  store_trait.rs
src/git/: backend.rs  gix_backend.rs  mod.rs
src/models/: category.rs  mod.rs  note.rs  project.rs  task.rs
src/tui/: browser.rs  form.rs  keys.rs  mod.rs  project_browser.rs  scroll_list.rs
tests/: cli.rs
