[package]
name = "moco"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "6"
gix = { version = "0.81.0", features = ["blocking-network-client"] }
ratatui = "0.29"
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tui-textarea = { version = "0.7", features = ["crossterm"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
